<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test2"
    tools:context="activities.AddUserActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:layout_centerHorizontal="true"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_user"

        android:hint="@string/prompt_email"
        android:textColorHint="#fff"
        android:ems="12"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:layout_centerHorizontal="true"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_password"

        android:hint="@string/prompt_password"
        android:textColorHint="#fff"
        android:ems="12"
        android:inputType="textPassword"
        android:textSize="20sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/login_start"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true"

        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:text="@string/prompt_adduser"
                android:textColor="#ffffff" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>