<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test2"
    tools:context=".activities.LoginPageActivity"
    >


    <androidx.cardview.widget.CardView
        android:id="@+id/deezer_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true"

        app:cardBackgroundColor="@color/colorDeezerLoginButton"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:text="@string/prompt_deezer_login"
                android:textSize="20dp"
                android:textColor="#000000" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/spotify_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true"

        app:cardBackgroundColor="@color/colorSpotifyLoginButton"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:text="@string/prompt_spotify_login"
                android:textSize="20dp"
                android:textColor="#000000" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/logs"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="450dp"
        android:layout_centerHorizontal="true"

        app:cardBackgroundColor="@color/colorLogsButton"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:text="@string/prompt_logs"
                android:textSize="20dp"
                android:textColor="#FFFFFF" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>

